feat: implement package manager detection and upgrade functionality
- Add detect-manager.ts for detecting package managers based on lockfiles.
- Introduce outdated.ts to fetch and parse outdated package information.
- Create package-info.ts for fetching and caching package metadata from npm.
- Implement read-package.ts to read and extract dependencies from package.json.
- Add upgrade.ts to handle package upgrades with options for dry run and safe mode.
- Define types in index.ts for package manager, dependencies, and upgrade actions.
- Create a color palette in colors.ts for UI elements and status indicators.
- Develop UI components for footer, header, left panel, right panel, and dashboard.
- Implement spinner.ts for loading indicators in the UI.
- Manage application state in state.ts, including dependencies, outdated packages, and conflicts.

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # dependencies (bun install)
 node_modules
+.opencode/
 
 # output
 out
@@ -21,6 +22,7 @@ report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 .env.test.local
 .env.production.local
 .env.local
+/.opencode
 
 # caches
 .eslintcache
