fix: update references from pkg-tui to depterm in documentation and code

--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "pkg-tui",
+  "name": "depterm",
   "version": "1.0.0",
-  "description": "Interactive terminal UI for managing JavaScript/TypeScript dependencies",
+  "description": "Terminal UI for managing JavaScript/TypeScript dependencies",
   "type": "module",
   "bin": {
-    "pkg-tui": "./dist/index.js"
+    "depterm": "./dist/index.js"
   },
   "files": [
     "dist"
@@ -12,7 +12,7 @@
   "scripts": {
     "dev": "bun run src/index.ts",
     "build": "bun build src/index.ts --outdir dist --target bun --minify",
-    "compile": "bun build --compile --outfile=pkg-tui src/index.ts",
+    "compile": "bun build --compile --outfile=depterm src/index.ts",
     "typecheck": "tsc --noEmit"
   },
   "keywords": [
