--- a/package.json
+++ b/package.json
@@ -58,5 +58,10 @@
   },
   "engines": {
     "bun": ">=1.0.0"
+  },
+  "overrides": {
+    "unicode-animations": {
+      "scripts": {}
+    }
   }
 }
