--- a/package.json
+++ b/package.json
@@ -48,8 +48,7 @@
   "license": "MIT",
   "dependencies": {
     "@opentui/core": "^0.1.80",
-    "semver": "^7.6.3",
-    "unicode-animations": "^1.0.3"
+    "semver": "^7.6.3"
   },
   "devDependencies": {
     "@types/bun": "latest",
@@ -58,10 +57,5 @@
   },
   "engines": {
     "bun": ">=1.0.0"
-  },
-  "overrides": {
-    "unicode-animations": {
-      "scripts": {}
-    }
   }
 }
